[gd_scene load_steps=2 format=3 uid="uid://c9mqx7n4yhpa"]

[ext_resource type="Script" path="res://ui/dialogs/combat_dialog.gd" id="1_combat_dialog"]

[node name="CombatDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_combat_dialog")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Combat Result"
horizontal_alignment = 1

[node name="OutcomeLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Outcome: Victory"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="AttackerCasualtiesLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Attacker Casualties: 0"

[node name="DefenderCasualtiesLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Defender Casualties: 0"

[node name="LootLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Loot: None"

[node name="ExperienceLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Experience Gained: 0"

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Close"
